# eigen

./: .gitmodules  README.md
cc/: README.md
cc/sgx/: Dockerfile
cc/sgx/attestation/: Cargo.toml
cc/sgx/attestation/src/: cert.rs  lib.rs  quote.rs  report.rs
cc/sgx/binder/: Cargo.toml
cc/sgx/binder/src/: binder.rs  ocall.rs
cc/sgx/cmake/: MesaTEEGenVars.cmake
cc/sgx/cmake/scripts/: gen_cov.sh
cc/sgx/cmake/tomls/: Cargo.sgx_trusted_lib.toml  Cargo.sgx_untrusted_app.toml  Cargo.unix_app.toml
cc/sgx/config/: Cargo.toml
cc/sgx/config/src/: lib.rs
cc/sgx/core/: Cargo.toml
cc/sgx/core/src/: db.rs  error.rs  lib.rs  prelude.rs
cc/sgx/core/src/ipc/: macros.rs  mod.rs
cc/sgx/core/src/ipc/channel/: app_dep.rs  tee_dep.rs
cc/sgx/core/src/ipc/protos/: ecall.rs
cc/sgx/core/src/rpc/: channel.rs  mod.rs  sendrecv.rs
cc/sgx/core/src/rpc/sgx/: client.rs  mod.rs  ra.rs
cc/sgx/core/src/rpc/unix/: mod.rs
cc/sgx/eigen_core/: Cargo.toml
cc/sgx/eigen_core/src/: prelude.rs
cc/sgx/examples/quickstart/src/: main.rs
cc/sgx/sdk/: Cargo.toml
cc/sgx/sdk/c_sdk/: Cargo.toml
cc/sgx/sdk/c_sdk/src/: enclave_info.rs  lib.rs  task.rs
cc/sgx/sdk/src/: lib.rs
cc/sgx/services/fns/client/: Cargo.toml
cc/sgx/services/fns/proto/: Cargo.toml
cc/sgx/services/fns/sgx_app/: Cargo.toml
cc/sgx/services/fns/sgx_trusted_lib/: Cargo.toml
cc/sgx/services/proto_gen/: main.rs
cc/sgx/tests/unit_test/sgx_app/: Cargo.toml
cc/sgx/tests/unit_test/sgx_trusted_lib/: Cargo.toml
cc/sgx/utils/: Cargo.toml
cc/sgx/utils/src/: lib.rs
fl/: README.md
ledger/: README.md
(+13 files in other folders)
